--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
+absl-py==1.4.0
+cffi==1.15.1
 contourpy==1.0.7
 cycler==0.11.0
+docplex==2.25.236
 et-xmlfile==1.1.0
 fonttools==4.39.3
+gurobipy==10.0.1
 importlib-resources==5.12.0
 joblib==1.2.0
 kiwisolver==1.4.4
 matplotlib==3.7.1
+mip==1.15.0
 networkx==3.1
 numpy==1.24.2
 openpyxl==3.1.2
+ortools==9.6.2534
 packaging==23.0
 pandas==2.0.0
 Pillow==9.5.0
+protobuf==4.23.0
+PuLP==2.7.0
+pycparser==2.21
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+scipy==1.10.1
 six==1.16.0
 tzdata==2023.3
 zipp==3.15.0
